Change flag list to string